# CppOpenCV_Tutorial

./: CMakeLists.txt  README.md
0_test/: CMakeLists.txt  test.cpp
1_labeling_on_pic/: 1_labeling_on_pic.cpp  2_paint_on_pic.cpp  3_nine_blocks.cpp  CMakeLists.txt
2_VideoCap/: 1_play_local_video.cpp  CMakeLists.txt
3_BGRExtractor/: BGRExtractor.cpp  CMakeLists.txt
4_MemToBin/: 1_MatBuffer.cpp  CMakeLists.txt
5_LoadBinToImg/: CMakeLists.txt  LoadBinToImg.cpp
6_ShowCorners/: CMakeLists.txt  ShowCorners.cpp
